[gd_scene load_steps=2 format=3 uid="uid://c08tsx8ocbpo0"]

[ext_resource type="Script" path="res://Game/UI/Screens/multiplayer_screen.gd" id="1_enpf4"]

[node name="MultiplayerScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_enpf4")

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 106.0
offset_right = 105.0
offset_bottom = 137.0
text = "Host
"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 132.0
offset_top = 106.0
offset_right = 176.0
offset_bottom = 137.0
text = "Join
"

[node name="StartGameButtom" type="Button" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 106.0
offset_right = 292.0
offset_bottom = 137.0
text = "Start Game
"

[node name="NameField" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 61.0
offset_top = 58.0
offset_right = 291.0
offset_bottom = 89.0
text = "Name..."

[connection signal="button_down" from="HostButton" to="." method="_on_host_button_button_down"]
[connection signal="button_down" from="JoinButton" to="." method="_on_join_button_button_down"]
[connection signal="button_down" from="StartGameButtom" to="." method="_on_start_game_buttom_button_down"]
